Screenshots section of shadow racer page finished.

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 										<h2 class="major">Shadow Racer</h2>
 										<p>
 											<span class="text icon solid fa-car"></span>
-											&nbspThird-person driving adventure game<br>
+											&nbsp;Third-person driving adventure game<br>
 											<span class="text icon solid fa-tools"></span>
-											&nbspUnreal Engine 4<br>
+											&nbsp;Unreal Engine 4<br>
 											<span class="text icon solid fa-calendar-check"></span>
-											&nbsp&nbsp8 months of development<br>
+											&nbsp;&nbsp;8 months of development<br>
 											<span class="text icon solid fa-user-plus"></span>
 											Team of 6 programmers<br>
 											<span class="text icon solid fa-gamepad"></span>
@@ -95,17 +95,17 @@
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>
-											<span class="header icon solid fa-ship"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<span class="header icon solid fa-ship"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											3D multiplayer boat fighting game<br>
 											<span class="header icon solid fa-wifi"></span>
 											Split-screen and networked multiplayer<br>
-											<span class="header icon solid fa-tools"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<span class="header icon solid fa-tools"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											Custom C++ engine<br>
-											<span class="header icon solid fa-calendar-check"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<span class="header icon solid fa-calendar-check"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											7-8 months of development<br>
-											<span class="header icon solid fa-user-plus"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<span class="header icon solid fa-user-plus"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											Team of 8 programmers<br>
-											<span class="header icon solid fa-gamepad"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+											<span class="header icon solid fa-gamepad"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<a href="https://games.digipen.edu/games/seavilizations" target="_blank">Published on DigiPen games gallery</a>
 										</p>
 										<a href="#" class="special">Learn more</a>
@@ -123,15 +123,15 @@
 											<span class="header icon solid fa-lungs"></span>
 											2D platformer/shooter set inside the human body<br>
 											<span class="header icon solid fa-tools"></span>
-											&nbspCustom C++ engine<br>
+											&nbsp;Custom C++ engine<br>
 											<span class="header icon solid fa-calendar-check"></span>
-											&nbsp&nbsp7-8 months of development<br>
+											&nbsp;&nbsp;7-8 months of development<br>
 											<span class="header icon solid fa-user-plus"></span>
 											Team of 6 programmers and 5 artists<br>
 											<span class="header icon solid fa-gamepad"></span>
 											<a href="https://games.digipen.edu/games/entails" target="_blank">Published on DigiPen games gallery</a><br>
 											<span class="header icon solid fa-award"></span>
-											&nbsp&nbsp&nbspMultiple award nominations
+											&nbsp;&nbsp;&nbsp;Multiple award nominations
 										</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
@@ -188,7 +188,7 @@
 									<div class="field">
 										<label for="email">Email</label>
 										<input type="email" name="email" id="email" required="required" maxlength="150" />
-										<input type="hidden" name="_next" value="https://Melell.github.io/elements.html">
+										<input type="hidden" name="_next" value="https://Melell.github.io/thankyou.html">
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
