--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -27,13 +27,13 @@
 								<a href="index.html" class="blue-on-hover">Home Page</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="index.html#one" class="blue-on-hover">Project Info</a>
+								<a href="#shortcuts" class="blue-on-hover">About</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="index.html#four" class="blue-on-hover">Screenshots</a>
+								<a href="#game-screenshots" class="blue-on-hover">Screenshots</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="#footer" class="blue-on-hover">My Work</a>
+								<a href="#my-contributions" class="blue-on-hover">My Work</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#footer" class="blue-on-hover">Contact</a>
@@ -48,50 +48,67 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Shadow Racer</h2>
-							<p>Gameplay programming&nbsp&nbsp&nbsp|&nbsp&nbsp&nbspGraphics/VFX</p>
+							<p>Gameplay programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Graphics/VFX</p>
 						</div>
 					</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
 
-						<!-- About me -->
-						<section id="about-me" class="wrapper alt style1">
+						<!-- "Blue" wrapper -->
+						<section id="shadow-racer-details" class="wrapper alt style1">
 
 							<div class="inner">
 
-								<h2 class="major">About</h2>
-								<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover" target="_blank">It was published on Steam in May 2022 to a majority of positive reviews.</a>
-                                    <br><br><a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp&nbspLink to Steam page</a>
-                                </p>
+								<div id="shortcuts">
+									<h2 class="major">Shortcuts</h2>
+									<ul class="actions small">
+										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
+										<li><a href="#game-screenshots" class="button small blue-on-hover icon solid fa-link">Screenshots</a></li>
+										<li><a href="#my-contributions" class="button small blue-on-hover icon solid fa-link">My Work</a></li>
+									</ul>
+								</div>
 
-								<ul class="game-info-list">
-									<li class="game-info-item icon solid fa-tools">&nbsp&nbspUnreal Engine 4</li>
-									<li class="game-info-item icon solid fa-calendar-check">&nbsp&nbsp8 months</li>
-									<li class="game-info-item icon solid fa-user-plus">&nbsp&nbsp6 programmers</li>
-								</ul>
+								<div id="about-shadow-racer">
+									<br><br>
+									<h2 class="major">About</h2>
+									<p>Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover" target="_blank">It was published on Steam in May 2022 to almost 100% positive reviews.</a>
+                                	    <br><br><a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp;&nbsp;Link to Steam page</a>
+                                	</p>
 
-								<section class="game-screenshots">
-									<h3 class="major">Image</h3>
-									<h4>Fit</h4>
+									<ul class="game-info-list">
+										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;Unreal Engine 4</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;8 months</li>
+										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;6 programmers</li>
+									</ul>
+								</div>
+
+								<div id="game-screenshots">
+									<br><br>
+									<h2 class="major">Screenshots</h2>
+									<h6 style="font-weight: lighter;">Gameplay Trailer</h6>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1" title="Shadow Racer Release Trailer" class="trailer"></iframe></span></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_5.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_5.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_7.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_8.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_8.jpg" alt="" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_9.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_9.jpg" alt="" /></span></a></div>
 										</div>
 									</div>
-									<h4>Left &amp; Right</h4>
+								</div>
+
+								<div id="my-contributions">
+									<br><br>
+									<h2 class="major">My Work</h2>
 									<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
 									<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat. Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui.</p>
-								</section>
+								</div>
 
 							</div>
 
@@ -113,7 +130,7 @@
 									<div class="field">
 										<label for="email">Email</label>
 										<input type="email" name="email" id="email" required="required" maxlength="150" />
-										<input type="hidden" name="_next" value="https://Melell.github.io/elements.html">
+										<input type="hidden" name="_next" value="https://Melell.github.io/thankyou.html">
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
