All images except small icons are now much smaller and of format .webp. Progress with my work section of Shadow Racer.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<title>Miguel Echeverria - C++ Generalist Programmer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="author" content="Miguel Echeverria" />
+		<meta name="description" content="I'm a game programmer who likes technology and building cool things. This portfolio webpage showcases some of the projects I have worked on so far. Enjoy! :)" />
+		<meta name="keywords" content="C++, Games, Videogames, Programming, GameDeveloper, GameProgrammer, Software, Portfolio" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/Website.png">
+		<link rel="icon" href="images/Website.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -68,7 +71,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" alt=""/></a>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.webp" alt="ShadowRacer-Banner"/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
@@ -83,7 +86,7 @@
 											<span class="text icon solid fa-gamepad"></span>
 											<a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" target="_blank">Published on Steam</a>
 										</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="ShadowRacer.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -91,7 +94,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="#" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.jpg" alt="" /></a>
+									<a href="#" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>
@@ -116,7 +119,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.JPG" alt="" /></a>
+									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>
@@ -145,25 +148,25 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Space Partitioning + GJK Collision Detection</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.jpg" alt="" /></a>
+											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
@@ -201,15 +204,15 @@
 							</form>
 							<ul class="contact">
 								<li class="contact-item">
-									<img class="footer-icon" src="images/House.png" alt="Home Icon"/>
+									<img class="footer-icon" src="images/House.png" alt="Home-Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Phone.png" alt=""/>
+									<img class="footer-icon" src="images/Phone.png" alt="Phone-Icon"/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Email.png" alt="Email Icon"/>
+									<img class="footer-icon" src="images/Email.png" alt="Email-Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
 								<li class="contact-item">
