Seavilizations and entails pages started.

--- a/Entails.html
+++ b/Entails.html
@@ -45,11 +45,11 @@
 
 
 				<!-- Banner -->
-					<section id="banner"> <!--class="shadow-racer-banner"-->
+					<section id="banner">
 						<div class="inner">
 							<div class="logo"></div>
-							<h2>Shadow Racer</h2>
-							<p>Gameplay programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Graphics/VFX</p>
+							<h2>Entails</h2>
+							<p>Core Engine/Tools and Gameplay Programming</p>
 						</div>
 					</section>
 
@@ -57,7 +57,7 @@
 					<section id="wrapper">
 
 						<!-- "Blue" wrapper -->
-						<section id="shadow-racer-details" class="wrapper alt style1">
+						<section id="entails-details" class="wrapper alt style1">
 
 							<div class="inner">
 
@@ -76,20 +76,20 @@
 									</ul>
 								</div>
 
-								<div id="about-shadow-racer">
+								<div id="about-entails">
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover" target="_blank">It was published on Steam in May 2022 to almost 100% positive reviews.</a>
+										Entails is a 2D platformer/shooter game where the player must disinfect a human body. The player must go through different veins or organs inside the body, fighting a variety of viruses as well as the body's defenses. The game tries to be somewhat realistic with the design of some enemies and environments, while giving them its own unique touch. <a href="https://games.digipen.edu/games/entails" class="blue-on-hover" target="_blank">It was published on the DigiPen games gallery in May 2020.</a>
 									</p>
                                 	<p>
-										<a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp;&nbsp;Link to Steam page</a>
+										<a href="https://games.digipen.edu/games/entails" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp;&nbsp;Link to DigiPen games gallery page</a>
 									</p>
 
 									<ul class="game-info-list">
-										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;Unreal Engine 4</li>
-										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;8 months</li>
-										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;6 programmers</li>
+										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;Custom C++ Engine</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;7-8 months</li>
+										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;6 programmers + 5 artists</li>
 									</ul>
 								</div>
 
@@ -99,7 +99,7 @@
 									<h6 style="font-weight: lighter;">Release Trailer</h6>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/lKqRAVqub4I?autoplay=1&mute=1&start=17&rel=0&loop=1&playlist=lKqRAVqub4I" title="Entails Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.webp" alt="Screenshot-1" /></span></a></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.webp" alt="Screenshot-2" /></span></a></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.webp" alt="Screenshot-3" /></span></a></div>
