--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -45,11 +45,11 @@
 
 
 				<!-- Banner -->
-					<section id="banner"> <!--class="shadow-racer-banner"-->
+					<section id="banner">
 						<div class="inner">
 							<div class="logo"></div>
-							<h2>Shadow Racer</h2>
-							<p>Gameplay programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Graphics/VFX</p>
+							<h2>Seavilizations</h2>
+							<p>Core Engine and Gameplay Programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;3D Modelling Assistance</p>
 						</div>
 					</section>
 
@@ -57,7 +57,7 @@
 					<section id="wrapper">
 
 						<!-- "Blue" wrapper -->
-						<section id="shadow-racer-details" class="wrapper alt style1">
+						<section id="seavilizations-details" class="wrapper alt style1">
 
 							<div class="inner">
 
@@ -76,14 +76,14 @@
 									</ul>
 								</div>
 
-								<div id="about-shadow-racer">
+								<div id="about-seavilizations">
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Shadow Racer is a third-person driving adventure game set in a post-apocalyptic Grand Canyon. The player must find and use the ancient powers of the flash, turbo and bumper in order to defeat the cars from the darkness empire. <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover" target="_blank">It was published on Steam in May 2022 to almost 100% positive reviews.</a>
+										Seavilizations is a 3D multiplayer boat combat game in which up to four players fight against each other to obtain special items. When a player gets enough of these items, escaping the map will grant them victory. Each player can select a boat from a different historic civilization, with different attacks and abilities. It can be played in split-screen or local networked multiplayer, <a href="https://games.digipen.edu/games/seavilizations" class="blue-on-hover" target="_blank">and it was published on the DigiPen games gallery in May 2021.</a>
 									</p>
                                 	<p>
-										<a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp;&nbsp;Link to Steam page</a>
+										<a href="https://games.digipen.edu/games/seavilizations" class="blue-on-hover icon brands fa-steam" target="_blank">&nbsp;&nbsp;Link to the Digipen games gallery page</a>
 									</p>
 
 									<ul class="game-info-list">
@@ -99,7 +99,7 @@
 									<h6 style="font-weight: lighter;">Release Trailer</h6>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/F10GEwkIaQs?autoplay=1&mute=1&start=5&rel=0&loop=1&playlist=F10GEwkIaQs" title="Seavilizations Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.webp" alt="Screenshot-1" /></span></a></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.webp" alt="Screenshot-2" /></span></a></div>
 											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.webp" alt="Screenshot-3" /></span></a></div>
