--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="#" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
+									<a href="Seavilizations.html" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>
@@ -111,7 +111,7 @@
 											<span class="header icon solid fa-gamepad"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<a href="https://games.digipen.edu/games/seavilizations" target="_blank">Published on DigiPen games gallery</a>
 										</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="Seavilizations.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -119,7 +119,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="#" class="my-image-left clickable-img"><img src="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
+									<a href="Entails.html" class="my-image-left clickable-img"><img src="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>
@@ -136,7 +136,7 @@
 											<span class="header icon solid fa-award"></span>
 											&nbsp;&nbsp;&nbsp;Multiple award nominations
 										</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="Entails.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
