More photos added.

--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -139,13 +139,22 @@
 									</div>
 									<div id="level-building" class="box my-box">
 										<h3 class="my-work-separator">Level Building</h3>
-											<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
 											<ul>
 												<li>Designed one of the game's main levels (race level)</li>
 												<li>Built said level from scratch using UE4's landscape and foliage systems</li>
 												<li>Collaborated with other level builders to improve the visual quality of their levels</li>
 											</ul>
-										<br>
+											<br>
+											<div class="box alt">
+												<div class="row gtr-uniform">
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.webp" alt="RaceLevel-Screenshot-1" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.webp" alt="RaceLevel-Screenshot-2" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.webp" alt="RaceLevel-Screenshot-3" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.webp" alt="RaceLevel-Screenshot-4" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.webp" alt="RaceLevel-Screenshot-5" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.webp" alt="RaceLevel-Screenshot-6" /></span></a></div>
+												</div>
+											</div>
 									</div>
 									<div id="cinematics" class="box my-box">
 										<h3 class="my-work-separator">Cinematics</h3>
@@ -178,6 +187,7 @@
 												<li>Other smaller lighting elements</li>
 											</ul>
 										</p>
+										<br>
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp" alt="Lighting-Screenshot-1" /></span></a></div>
