Tasks for entails added.

--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -87,9 +87,9 @@
 									</p>
 
 									<ul class="game-info-list">
-										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;Unreal Engine 4</li>
-										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;8 months</li>
-										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;6 programmers</li>
+										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;Custom C++ Engine</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;7-8 months</li>
+										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;8 programmers</li>
 									</ul>
 								</div>
 
@@ -116,8 +116,8 @@
 									<br><br>
 									<h2 class="major">My Work</h2>
 									<br>
-									<div id="race-system" class="box my-box">
-										<h3 class="my-work-separator">Race System</h3>
+									<div id="entity-comp-system" class="box my-box">
+										<h3 class="my-work-separator">Entity Component System</h3>
 										<p>
 											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/accept_challenge.webp"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/accept_challenge.webp" alt="Race-Screenshot-1" /></span></a>
 											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/bumper_handing.webp"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/bumper_handing.webp" alt="Race-Screenshot-2" /></span></a>
@@ -137,8 +137,8 @@
 										<iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?&autoplay=1&mute=1&rel=0&version=3&loop=1&playlist=7cDI4O5SWLQ" title="Shadow Racer Release Trailer" class="trailer"></iframe>
 										<br>
 									</div>
-									<div id="level-building" class="box my-box">
-										<h3 class="my-work-separator">Level Building</h3>
+									<div id="core-engine" class="box my-box">
+										<h3 class="my-work-separator">Core Engine Systems</h3>
 											<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
 											<ul>
 												<li>Designed one of the game's main levels (race level)</li>
@@ -147,8 +147,8 @@
 											</ul>
 										<br>
 									</div>
-									<div id="cinematics" class="box my-box">
-										<h3 class="my-work-separator">Cinematics</h3>
+									<div id="boat-movement" class="box my-box">
+										<h3 class="my-work-separator">Boat Movement</h3>
 											<span class="image left"><img src="images/pic01.jpg" alt="" /></span>
 											<ul>
 												<li>Implemented several high quality cinematics that added context to the story and the mechanics of the game</li>
@@ -156,8 +156,8 @@
 											</ul>
 										<br>
 									</div>
-									<div id="feedback" class="box my-box">
-										<h3 class="my-work-separator">Player/Environment Feedback</h3>
+									<div id="boat-mechanics" class="box my-box">
+										<h3 class="my-work-separator">Boats' mechanics</h3>
 										<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
 										<ul>
 											<li>Added controller rumble feedback to player mechanics like flashing, drifting, or using turbo</li>
@@ -167,8 +167,8 @@
 										</ul>
 										<br>
 									</div>
-									<div id="level-lighting" class="box my-box">
-									<h3 class="my-work-separator">Level Lighting</h3>
+									<div id="cinematics" class="box my-box">
+									<h3 class="my-work-separator">Cinematics</h3>
 										<p>
 											Transformed the visual quality of the levels through clever use of Unreal's lighting and post-process effects, while monitoring performance.
 											<ul>
@@ -189,8 +189,22 @@
 											</div>
 										</div>
 									</div>
-									<div id="vfx" class="box my-box">
-										<h3 class="my-work-separator">VFX</h3>
+									<div id="other-gameplay-tasks" class="box my-box">
+										<h3 class="my-work-separator">Other Gameplay Tasks</h3>
+										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+											Created a small set of vfx using Unreal's material editor and Niagara system:
+											<ul>
+												<li>Car Turbo</li>
+												<li>Darkness Portals</li>
+												<li>Drifting Marks</li>
+												<li>Smoke Particles</li>
+												<li>Car Explosion</li>
+												<li>Lightflash Recovery Effect</li>
+											</ul>
+										</p>
+									</div>
+									<div id="3d-modelling" class="box my-box">
+										<h3 class="my-work-separator">3D Modelling</h3>
 										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
 											Created a small set of vfx using Unreal's material editor and Niagara system:
 											<ul>
