Testing out webp compatibility.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.webp" alt="ShadowRacer-Banner"/></a>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img">
+										<img src="images/ShadowRacerBanner.jpg" srcset="images/EntailsBanner.webp, images/SeavilizationsBanner.jpg" alt="ShadowRacer-Banner"/>
+									</a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
