Other test for webp compatibility

--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="ShadowRacer.html" class="my-image-left clickable-img">
-										<img src="images/ShadowRacerBanner.jpg" srcset="images/EntailsBanner.webp, images/SeavilizationsBanner.jpg" alt="ShadowRacer-Banner"/>
-									</a>
+									<picture>
+										<source type="image/webp" srcset="images/SeavilizationsBanner.webp">
+										<source type="image/jpg" srcset="images/SeavilizationsBanner.jpg">
+										<!--<a href="ShadowRacer.html" class="my-image-left clickable-img">-->
+										<img src="images/SeavilizationsBanner.jpg" alt="ShadowRacer-Banner"/>
+										<!--</a>-->
+									</picture>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
