--- a/index.html
+++ b/index.html
@@ -71,13 +71,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<picture>
-										<source type="image/webp" srcset="images/SeavilizationsBanner.webp">
-										<source type="image/jpg" srcset="images/SeavilizationsBanner.jpg">
-										<!--<a href="ShadowRacer.html" class="my-image-left clickable-img">-->
-										<img src="images/SeavilizationsBanner.jpg" alt="ShadowRacer-Banner"/>
-										<!--</a>-->
-									</picture>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.webp" srcset="images/ShadowRacerBanner.webp, images/ShadowRacerBanner.jpg" alt="ShadowRacer-Banner"/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
