Most of the screenshots now have a fallback

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.webp" srcset="images/ShadowRacerBanner.jpg" alt="ShadowRacer-Banner"/></a>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" srcset="images/ShadowRacerBanner.webp" alt="ShadowRacer-Banner"/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
@@ -94,7 +94,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="Seavilizations.html" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
+									<a href="Seavilizations.html" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.jpg" srcset="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>
@@ -119,7 +119,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="Entails.html" class="my-image-left clickable-img"><img src="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
+									<a href="Entails.html" class="my-image-left clickable-img"><img src="images/EntailsBanner.jpg" srcset="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>
@@ -148,25 +148,25 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.jpg" srcset="images/ClothPlusAnim.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.jpg" srcset="images/AntColonySimWithInternetImages.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.jpg" srcset="images/SpacePartitioning.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Space Partitioning + GJK Collision Detection</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.jpg" srcset="images/NetAsteroidsWithParticles.webp" alt="Project-Screenshot" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
